k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/echo/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server-service
                port:
                  number: 8080
          #   - path: /api/users/?(.*)
          #     pathType: ImplementationSpecific
          #     backend:
          #       service:
          #         name: auth-srv
          #         port:
          #           number: 3000
          #   - path: /api/tickets/?(.*)
          #     pathType: ImplementationSpecific
          #     backend:
          #       service:
          #         name: tickets-srv
          #         port:
          #           number: 3000
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 3000
        #   - path: /?(.*)
        #     pathType: ImplementationSpecific
        #     backend:
        #       service:
        #         name: client-srv
        #         port:
        #           number: 3000
    - host: auth.ticketing.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
